# eatsomeone-rs

./: Cargo.toml  README.md
src/: assets.rs  bottom_bar.rs  env.rs  main.rs  michele.rs  topbar.rs
