[package]
name = "eatsomeone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_framepace = "0.14.1"
once_cell = "1.19.0"
rand = "0.8.5"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
